[package]
name = "josekit"
version = "0.8.5"
description = "JOSE (Javascript Object Signing and Encryption) library for Rust."
repository = "https://github.com/hidekatsu-izuno/josekit-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Hidekatsu Izuno <hidekatsu.izuno@gmail.com>"]
keywords = ["jose", "jwt", "jws", "jwe", "jwa"]
categories = ["authentication"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vendored = ["openssl/vendored"]

[dependencies]
thiserror = "1"
anyhow = "1"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
base64 = "0.21"
flate2 = "1"
openssl = "0.10.62"
time = "0.3"

[dev-dependencies]
doc-comment = "0.3.3"


# TODO: Start actually fixing these lints
[lints.rust]
dead_code = "allow"
missing_debug_implementations = "allow"
missing_docs = "allow"
trivial_casts = "allow"
trivial_numeric_casts = "allow"
unused_extern_crates = "allow"
unused_import_braces = "allow"
unused_qualifications = "allow"

[lints.clippy]
# TODO: Disable
all = "allow"
tabs_in_doc_comments = "allow"
branches_sharing_code = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
checked_conversions = "allow"
cloned_instead_of_copied = "allow"
create_dir = "allow"
dbg_macro = "allow"
default_trait_access = "allow"
expect_used = "allow"
expl_impl_clone_on_copy = "allow"
fallible_impl_from = "allow"
filetype_is_file = "allow"
filter_map_next = "allow"
flat_map_option = "allow"
float_cmp = "allow"
fn_params_excessive_bools = "allow"
fn_to_numeric_cast_any = "allow"
future_not_send = "allow"
if_then_some_else_none = "allow"
implicit_clone = "allow"
implicit_hasher = "allow"
implicit_saturating_sub = "allow"
imprecise_flops = "allow"
inefficient_to_string = "allow"
items_after_statements = "allow"
iter_not_returning_iterator = "allow"
large_digit_groups = "allow"
large_stack_arrays = "allow"
large_types_passed_by_value = "allow"
lossy_float_literal = "allow"
macro_use_imports = "allow"
manual_let_else = "allow"
manual_ok_or = "allow"
many_single_char_names = "allow"
map_unwrap_or = "allow"
mem_forget = "allow"
#missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
must_use_candidate = "allow"
mut_mut = "allow"
mutex_atomic = "allow"
needless_bitwise_bool = "allow"
non_send_fields_in_send_ty = "allow"
option_option = "allow"
path_buf_push_overwrite = "allow"
print_stderr = "allow"
print_stdout = "allow"
ptr_as_ptr = "allow"
range_minus_one = "allow"
range_plus_one = "allow"
rc_buffer = "allow"
rc_mutex = "allow"
redundant_closure_for_method_calls = "allow"
ref_binding_to_reference = "allow"
ref_option_ref = "allow"
return_self_not_must_use = "allow"
same_functions_in_if_condition = "allow"
same_name_method = "allow"
semicolon_if_nothing_returned = "allow"
str_to_string = "allow"
string_to_string = "allow"
suboptimal_flops = "allow"
suspicious_operation_groupings = "allow"
too_many_lines = "allow"
trait_duplication_in_bounds = "allow"
trivially_copy_pass_by_ref = "allow"
type_repetition_in_bounds = "allow"
undocumented_unsafe_blocks = "allow"
unnested_or_patterns = "allow"
unreadable_literal = "allow"
unseparated_literal_suffix = "allow"
unused_async = "allow"
unused_self = "allow"
unwrap_used = "allow"
used_underscore_binding = "allow"
useless_let_if_seq = "allow"
verbose_file_reads = "allow"
