[package]
name = "josekit"
version = "0.10.2"
description = "JOSE (Javascript Object Signing and Encryption) library for Rust."
repository = "https://github.com/hidekatsu-izuno/josekit-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Hidekatsu Izuno <hidekatsu.izuno@gmail.com>"]
keywords = ["jose", "jwt", "jws", "jwe", "jwa"]
categories = ["authentication"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vendored = ["openssl/vendored"]

[dependencies]
thiserror = "2"
anyhow = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
base64 = "0.22"
flate2 = "1"
time = "0.3"
openssl = { version = "0.10.68" }

[dev-dependencies]
doc-comment = "0.3.3"
